samples/_failures_safe/1761605602_eb0ed8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82766bf7.c: In function ‘calculate_stats’:
./samples/SAFE/__tmp_82766bf7.c:138:31: error: expected ‘;’ at end of input
  138 |     stats->max_level_count = 0
      |                               ^
      |                               ;
./samples/SAFE/__tmp_82766bf7.c:138:5: error: expected declaration or statement at end of input
  138 |     stats->max_level_count = 0
      |     ^~~~~
